one pixel fix removed the extra scrollbar :)

--- a/src/app/css/lib.less
+++ b/src/app/css/lib.less
@@ -2,7 +2,7 @@
 @top-menu-width: 50px;
 @top-component-width: 697px;
 @top-component-background-color: #33333ccc;
-@top-banner-height: 90px;
+@top-banner-height: 89px;
 @components-background-color: #26262fcc;
 @Leftbar-background-color: #1a1a1fcc;
 
@@ -29,9 +29,9 @@
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: rgb(51, 50, 50);
+  background: rgb(63, 67, 83);
 }
 
 ::-webkit-scrollbar-corner {
-  background: rgba(0, 0, 0, 0);
+  background: rgba(111, 124, 150, 0.863);
 }
